Update kode baru
